src/App.css
:root {
  --main-background-color: #282c34;
  --main-text-color: #ffffff;
  --main-border-color: silver;
  --main-accent-color: gold;
  --soft-border-color: #666666;
}

body {
  text-align: center;
  background-color: var(--main-background-color);
}

.menu-container { 
    display: flex;
    width: 100%;
    justify-content: right;
    position: absolute;
    top: 15px;
}

.menu-icon {
background-image: url('data:image/svg+xml,<svg width="50px" height="50px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="%23ffffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M4 18L20 18" stroke="%23ffffff" stroke-width="2" stroke-linecap="round"></path><path d="M4 12L20 12" stroke="%23ffffff" stroke-width="2" stroke-linecap="round"></path><path d="M4 6L20 6" stroke="%23ffffff" stroke-width="2" stroke-linecap="round"></path></g></svg>');
height: 50px;
width: 50px;
display: block;
position: absolute;
right: 50px;
}
.menu-icon:hover {
  cursor: pointer;
  background-image: url('data:image/svg+xml,<svg width="50px" height="50px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="%23cccccc"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M4 18L20 18" stroke="%23cccccc" stroke-width="2" stroke-linecap="round"></path><path d="M4 12L20 12" stroke="%23cccccc" stroke-width="2" stroke-linecap="round"></path><path d="M4 6L20 6" stroke="%23cccccc" stroke-width="2" stroke-linecap="round"></path></g></svg>');
}
.menu-icon:active {
  cursor: pointer;
  background-image: url('data:image/svg+xml,<svg width="50px" height="50px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="%23aaaaaa"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M4 18L20 18" stroke="%23aaaaaa" stroke-width="2" stroke-linecap="round"></path><path d="M4 12L20 12" stroke="%23aaaaaa" stroke-width="2" stroke-linecap="round"></path><path d="M4 6L20 6" stroke="%23aaaaaa" stroke-width="2" stroke-linecap="round"></path></g></svg>');
}

.hidden {
  display: none;
}

.menu-flyout {
    font-size: 12pt;
    text-align: left;
    padding: 0 15px;
    position: absolute;
    right: -10px;
    top: 32px;
}
.menu-flyout ul {
  list-style: none;
  padding: 0;
  text-wrap: nowrap;
}
.menu-flyout li a {
  border:1px solid blue;
  background-color: var(--main-text-color);
  margin-bottom:1px; 
  padding:8px;
  display: block;
}

.App {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  color: var(--main-text-color);
    min-width: 1000px;
}

.App-header {
  font-size: calc(10px + 2vmin);
  display: flex;
  align-items: center;
  margin: 20px;
  padding-top: 10px;
}

.header-logo {
  padding-right: 25px;
}

.header-button {
  padding: 10px;
  margin: 0px 8px;
}

.record-viewer-options-bar {
  display: block;
  width: 100%;
  border: 1px solid var(--main-border-color);
    border-width: 1px 0;
  padding: 15px;
  margin-bottom: 25px;
  font-style: italic;
    padding-right: 100px;
}

.record-viewer-options-bar select {
  -webkit-appearance: none;
}

.record-viewer-parent {
  display: flex;
  flex-wrap: wrap;
  justify-content: left;
  margin-bottom: 32px;
}

.record-group-title {
  font-weight: bold;
}

.record-viewer-standard-set {
  display: flex;
  align-content: space-evenly;
  flex-wrap: wrap;
  margin-bottom: 15px;
}

.current-leaders-group {
  min-width: 450px;
  width: 45%;
  text-align: center;
  display: inline-block;
  border-right: 1px solid var(--soft-border-color);
  padding: 0 50px 0 25px;
  margin-right: 30px;
}

.combined-history-group {
  display: inline-block;
  width: 55%;
  padding-left: 20px;
  text-align: left;
  min-width: 300px;
}

.record-viewer-standard {
  border: 1px solid var(--main-border-color);
  font-size: 12px;
  text-align: left;
  border-radius: 3px;
  box-sizing: border-box;
  margin-right: 3%;
  padding: 0px 24px 12px;
  width: 30%;
}

.record-viewer-record-holder {
  border: 5px solid var(--main-border-color);
  font-size: 12px;
  text-align: left;
  border-radius: 3px;
  margin: 6px;
  padding: 0px 24px 12px;
  width: 100%;
}

.combined-history-group .record-viewer-record-holder {
  width: 200px;
  border: 1px solid var(--main-border-color);
}

.combined-history-group .record-viewer-columns {
  display: inline;
}

.combined-history-group .record-viewer-full-width-detail {
  text-align: left;
}

.combined-history-group .record-viewer-columns p {
  display: block;
  width: auto;
  text-align: left;
  text-overflow: ellipsis;
  text-wrap: nowrap;
  overflow: hidden;
}

.record-viewer-record-current {
  border: 5px solid var(--main-accent-color);
}

.record-viewer-ranking {
  background-color: var(--main-accent-color);
  color: black;
  display: inline-block;
  width: 20px;
  border-radius: 50%;
  height: 20px;
  line-height: 20px;
  margin-right: 7px;
  border: 1px solid black;
}

.record-viewer-standards-parent {
  padding-bottom: 0;
  margin-bottom: 45px;
  border-bottom: 1px solid var(--main-border-color);
}

.record-group-info {
  /* padding: 0 25px; */
  text-align: left;
  padding-left: 5px;
}

.record-group-description {
  /* text-align: center; */
  font-size: 12px;
  font-style: italic;
}

.combined-history-group .record-group-info {
  /* padding: 0 100px; */
  width: 75%;
  /* text-align: center; */
}

.combined-history-group .record-viewer-ranking {
  background: transparent;
  border-color: var(--main-border-color);
  color: var(--main-text-color);
}

.record-viewer-record-title {
  color: var(--main-accent-color);
  font-weight: bold;
  display: block;
  text-align: center;
}

.combined-history-group .record-viewer-record-title {
  color: var(--main-text-color);
}

.record-viewer-columns {
  display: flex;
  column-count: 3;
  justify-content: space-around;
}

.record-viewer-full-width-detail {
  width: 100%;
  display: block;
  text-align: center;
  font-weight: bold;
  font-style: italic;
  line-height: 18px;
  text-overflow: ellipsis;
  text-wrap: nowrap;
  overflow: hidden;
}

.record-viewer-columns p {
  display: inline-flex;
  width: 150px;
  text-align: left;
}

.record-viewer-parent p {
  margin: 0px 0px;
  padding: 2px 0px;
}

.record-viewer-record-header {
  border-bottom: 1px solid var(--main-border-color);
  padding: 12px 0 0 0;
}

.record-viewer-view-link {
  color: var(--main-border-color);
  width: 100%;
  display: flex;
  text-align: right;
  justify-content: end;
  margin: 0;
}

.records-viewer-loading-container {
  display: flex;
  justify-content: center;
  padding: 100px;
}

.records-viewer-content-spinner {
  display: flex;
  justify-content: center;
  padding: 24px;
}

.sort-select-parent {
  width: 100%;
  display: block;
  text-align: left;
  margin-bottom: 10px;
  padding-left: 5px;
}

.record-viewer-fine-print {
  font-size: 12px;
  font-style: italic;
}

.record-viewer-results-parent {
  display: flex;
  padding: 0 75px 0 50px;
}

